# BlackJarvis

./: .gitignore  README.md  SCOPE.md  main.py  pyproject.toml
blackjarvis/core/: cli.py  router.py  tools.py
blackjarvis/llm/: ollama_client.py  prompts.py
blackjarvis/memory/: diff.py  engagement.py  findings.py  notes.py
blackjarvis/recon/: pipeline.py
blackjarvis/tools/: httpx.py  nuclei.py  subfinder.py
